new configuration - motion always enabled in the background

--- a/motion.conf
+++ b/motion.conf
@@ -8,10 +8,10 @@
 ############################################################
 
 # Start in daemon (background) mode and release terminal (default: off)
-daemon off
+daemon on
 
 # File to store the process ID, also called pid file. (default: not defined)
-process_id_file /var/run/motion/motion.pid
+process_id_file /home/monitoring/Pulpit/HomeSurveillanceSystem/motion.pid
 
 ############################################################
 # Basic Setup Mode
@@ -765,10 +765,10 @@ quiet on
 ; camera /etc/motion/camera2.conf
 ; camera /etc/motion/camera3.conf
 ; camera /etc/motion/camera4.conf
-camera /home/monitoring/Pulpit/motion/camera1.conf
-camera /home/monitoring/Pulpit/motion/camera2.conf
-; camera /home/monitoring/Pulpit/motion/camera3.conf
-; camera /home/monitoring/Pulpit/motion/camera4.conf
+camera /home/monitoring/Pulpit/HomeSurveillanceSystem/camera1.conf
+camera /home/monitoring/Pulpit/HomeSurveillanceSystem/camera2.conf
+; camera /home/monitoring/Pulpit/HomeSurveillanceSystem/camera3.conf
+; camera /home/monitoring/Pulpit/HomeSurveillanceSystem/camera4.conf
 
 
 ##############################################################
