--- a/motion.conf
+++ b/motion.conf
@@ -105,7 +105,7 @@ height 480
 
 # Maximum number of frames to be captured per second.
 # Valid range: 2-100. Default: 100 (almost no limit).
-framerate 1
+framerate 2
 
 # Minimum time in seconds between capturing picture frames from the camera.
 # Default: 0 = disabled - the capture rate is given by the camera framerate.
@@ -194,7 +194,7 @@ switchfilter off
 
 # Threshold for number of changed pixels in an image that
 # triggers motion detection (default: 1500)
-threshold 6000
+threshold 3000
 
 # Automatically tune the threshold down if possible (default: off)
 threshold_tune off
@@ -499,13 +499,13 @@ stream_quality 50
 
 # Output frames at 1 fps when no motion is detected and increase to the
 # rate given by stream_maxrate when motion is detected (default: off)
-stream_motion off
+stream_motion on
 
 # Maximum framerate for stream streams (default: 1)
-stream_maxrate 3
+stream_maxrate 2
 
 # Restrict stream connections to localhost only (default: on)
-stream_localhost on
+stream_localhost off
 
 # Limits the number of images per connection (default: 0 = unlimited)
 # Number can be defined by multiplying actual stream rate by desired number of seconds
@@ -524,7 +524,7 @@ stream_auth_method 0
 
 # Percentage to scale the stream image for preview
 # Default: 25
-; stream_preview_scale 25
+stream_preview_scale 50
 
 # Have stream preview image start on a new line
 # Default: no
@@ -538,7 +538,7 @@ stream_auth_method 0
 webcontrol_port 8080
 
 # Restrict control connections to localhost only (default: on)
-webcontrol_localhost on
+webcontrol_localhost off
 
 # Output for http server, select off to choose raw text plain (default: on)
 webcontrol_html_output on
