ubuntu server configuration

--- a/motion.conf
+++ b/motion.conf
@@ -11,7 +11,7 @@
 daemon on
 
 # File to store the process ID, also called pid file. (default: not defined)
-process_id_file /home/monitoring/Pulpit/HomeSurveillanceSystem/motion.pid
+process_id_file /home/monitoring/HomeSurveillanceSystem/motion.pid
 
 ############################################################
 # Basic Setup Mode
@@ -23,7 +23,7 @@ setup_mode off
 
 # Use a file to save logs messages, if not defined stderr and syslog is used. (default: not defined)
 #logfile /var/log/motion/motion.log
-#logfile /home/monitoring/Pulpit/motion/motion.log
+logfile /home/monitoring/HomeSurveillanceSystem/motion.log
 
 # Level of log messages [1..9] (EMG, ALR, CRT, ERR, WRN, NTC, INF, DBG, ALL). (default: 6 / NTC)
 log_level 6
@@ -524,7 +524,7 @@ stream_auth_method 0
 
 # Percentage to scale the stream image for preview
 # Default: 25
-stream_preview_scale 50
+stream_preview_scale 30
 
 # Have stream preview image start on a new line
 # Default: no
@@ -765,10 +765,10 @@ quiet on
 ; camera /etc/motion/camera2.conf
 ; camera /etc/motion/camera3.conf
 ; camera /etc/motion/camera4.conf
-camera /home/monitoring/Pulpit/HomeSurveillanceSystem/camera1.conf
-camera /home/monitoring/Pulpit/HomeSurveillanceSystem/camera2.conf
-; camera /home/monitoring/Pulpit/HomeSurveillanceSystem/camera3.conf
-; camera /home/monitoring/Pulpit/HomeSurveillanceSystem/camera4.conf
+camera /home/monitoring/HomeSurveillanceSystem/camera1.conf
+camera /home/monitoring/HomeSurveillanceSystem/camera2.conf
+; camera /home/monitoring/HomeSurveillanceSystem/camera3.conf
+; camera /home/monitoring/HomeSurveillanceSystem/camera4.conf
 
 
 ##############################################################
