--- a/camera2.conf
+++ b/camera2.conf
@@ -23,7 +23,7 @@ input -1
 # Draw a user defined text on the images using same options as C function strftime(3)
 # Default: Not defined = no text
 # Text is placed in lower left corner
-text_left video2
+text_left Kamera2
 
 
 ############################################################
@@ -51,7 +51,7 @@ target_dir /home/monitoring/Kamery/Kamera2
 # File extension .jpg or .ppm is automatically added so do not include this
 # Set to 'preview' together with best-preview feature enables special naming
 # convention for preview shots. See motion guide for details
-picture_filename CAM2_%v-%Y%m%d%H%M%S-%q
+picture_filename CAM2_%Y%m%d%H%M%S-%q
 
 
 ############################################################
