--- a/camera3.conf
+++ b/camera3.conf
@@ -15,8 +15,8 @@ camera_id = 3
 # Videodevice to be used for capturing  (default /dev/video0)
 # for FreeBSD default is /dev/bktr0 
 ; videodevice /dev/video2
-netcam_url http://192.168.0.100:8083/mjpeg
-netcam_userpass qba:sajgonki
+netcam_url http://192.168.0.106:8083/mjpeg
+netcam_userpass monitoring:mocnyfull
 
 # The video input to be used (default: -1)
 # Should normally be set to 1 for video/TV cards, and -1 for USB cameras 
@@ -25,7 +25,7 @@ input 1
 # Draw a user defined text on the images using same options as C function strftime(3)
 # Default: Not defined = no text
 # Text is placed in lower left corner
-text_left videoIP
+text_left Kamera3
 
 
 ############################################################
@@ -53,7 +53,7 @@ target_dir /home/monitoring/Kamery/Kamera3
 # File extension .jpg or .ppm is automatically added so do not include this
 # Set to 'preview' together with best-preview feature enables special naming
 # convention for preview shots. See motion guide for details
-picture_filename CAM2_%v-%Y%m%d%H%M%S-%q
+picture_filename CAM2_%Y%m%d%H%M%S-%q
 
 
 ############################################################
