--- a/motion.conf
+++ b/motion.conf
@@ -110,7 +110,7 @@ framerate 2
 # Minimum time in seconds between capturing picture frames from the camera.
 # Default: 0 = disabled - the capture rate is given by the camera framerate.
 # This option is used when you want to capture images at a rate lower than 2 per second.
-minimum_frame_time 0
+minimum_frame_time 3
 
 # URL to use if you are using a network camera, size will be autodetected (incl http:// ftp:// mjpg:// rtsp:// mjpeg:// or file:///)
 # Must be a URL that returns single jpeg pictures or a raw mjpeg stream. A trailing slash may be required for some cameras.
@@ -194,16 +194,16 @@ switchfilter off
 
 # Threshold for number of changed pixels in an image that
 # triggers motion detection (default: 1500)
-threshold 3000
+threshold 4000
 
 # Automatically tune the threshold down if possible (default: off)
 threshold_tune off
 
 # Noise threshold for the motion detection (default: 32)
-noise_level 32
+noise_level 200
 
 # Automatically tune the noise threshold (default: on)
-noise_tune on
+noise_tune off
 
 # Despeckle motion image using (e)rode or (d)ilate or (l)abel (Default: not defined)
 # Recommended value is EedDl. Any combination (and number of) of E, e, d, and D is valid.
@@ -233,7 +233,7 @@ lightswitch 0
 # Picture frames must contain motion at least the specified number of frames
 # in a row before they are detected as true motion. At the default of 1, all
 # motion is detected. Valid range: 1 to thousands, recommended 1-5
-minimum_motion_frames 3
+minimum_motion_frames 1
 
 # Specifies the number of pre-captured (buffered) pictures from before motion
 # was detected that will be output at motion detection.
@@ -251,7 +251,7 @@ post_capture 0
 # events causing all Motion to be written to one single movie file and no pre_capture.
 # If set to 0, motion is running in gapless mode. Movies don't have gaps anymore. An
 # event ends right after no more motion is detected and post_capture is over.
-event_gap 60
+event_gap 30
 
 # Maximum length in seconds of a movie
 # When value is exceeded a new movie file is created. (Default: 0 = infinite)
@@ -761,15 +761,9 @@ quiet on
 # This motion.conf file AND camera1.conf and camera2.conf.
 # Only put the options that are unique to each camera in the
 # camera config files.
-; camera /etc/motion/camera1.conf
-; camera /etc/motion/camera2.conf
-; camera /etc/motion/camera3.conf
-; camera /etc/motion/camera4.conf
 camera /home/monitoring/HomeSurveillanceSystem/camera1.conf
 camera /home/monitoring/HomeSurveillanceSystem/camera2.conf
-; camera /home/monitoring/HomeSurveillanceSystem/camera3.conf
-; camera /home/monitoring/HomeSurveillanceSystem/camera4.conf
-
+;camera /home/monitoring/HomeSurveillanceSystem/camera3.conf
 
 ##############################################################
 # Camera config directory - One for each camera.
