lazy loading with usage of SED

--- a/motion.conf
+++ b/motion.conf
@@ -197,13 +197,13 @@ switchfilter off
 threshold 4000
 
 # Automatically tune the threshold down if possible (default: off)
-threshold_tune off
+threshold_tune on
 
 # Noise threshold for the motion detection (default: 32)
-noise_level 200
+noise_level 255
 
 # Automatically tune the noise threshold (default: on)
-noise_tune off
+noise_tune on
 
 # Despeckle motion image using (e)rode or (d)ilate or (l)abel (Default: not defined)
 # Recommended value is EedDl. Any combination (and number of) of E, e, d, and D is valid.
@@ -233,7 +233,7 @@ lightswitch 0
 # Picture frames must contain motion at least the specified number of frames
 # in a row before they are detected as true motion. At the default of 1, all
 # motion is detected. Valid range: 1 to thousands, recommended 1-5
-minimum_motion_frames 1
+minimum_motion_frames 3
 
 # Specifies the number of pre-captured (buffered) pictures from before motion
 # was detected that will be output at motion detection.
